[project]
name = "langgraph-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "sathwik-reddy-m",email = "sathwikreddym79@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langgraph (>=1.0.5,<2.0.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-openai (>=1.1.6,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "langchain-core (>=1.2.6,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain-groq (>=1.1.1,<2.0.0)",
    "arxiv (>=2.4.0,<3.0.0)",
    "wikipedia (>=1.4.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "langgraph_playground", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
